# ai-driven-mobile-automation

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CHATBOT_GUIDE.md  DEVELOPMENT.md  INSTALLATION.md  LICENSE  MANIFEST.in  PYPI_INSTALL.md  README.md  SETUP.md  YAML_GUIDE.md  YAML_QUICK_START.md  __main__.py  app.py  bedrock_client.py  chatbot.py  chatbot_entrypoint.py  chatbot_page_object_orchestrator.py  command.py  config.py  generate_page_objects.py  generate_regression_test.py  generate_test_from_workflow.py  generate_test_with_page_objects.py  locator_validation_service.py  locator_validator.py  logger.py  mcp_client.py  orchestrator.py  pyproject.toml  requirements.txt  run_yaml.py  server.py  session_store.py  tools_app_management.py  tools_context.py  tools_documentation.py  tools_interactions.py  (+5 more)
page_objects/: __init__.py  base_page.py  home_page.py  login_page.py  product_details_page.py
prompts/: ecommerce_login_purchase.yml
templates/: page_object.jinja2  test.jinja2
